css/style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Outfit', sans-serif;
    font-size: 1.25rem;
}

:root{
    --highlight: purple;
    --dark-gray: #262626;
    --light-gray: #c0c0c0;
}

.drawma {
    max-width: 50%;
    height: auto;
    text-align: center;
    margin-left: 25%;
    margin-top: 20px;
}


body {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    background-color: var(--dark-gray);
    flex-direction: column;
}

header {
    display: block;
    align-items: center;
} 

.container {
    flex-direction: row;
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    gap: 10px;
    padding: 10px;
    max-width: 1050px;
}

section {
    background: #fff;
    border-radius: 7px;
}

/* TOOL DISPLAY *************************************************************/

.tool-display {
    width: 250px;
    padding: 15px 22px 0;
}

.tool-display .row {
    margin-bottom: 0px;
}

.row .options {
    list-style: none;
    margin: 10px 0 0 5px;
}

.row .options .option {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.option:is(:hover, .active) :where(span, label){
    color: var(--highlight);
}

.toggle :where(span, label) {
    color: grey;
    padding-left: 10px;
}

.tool-choice:hover {
    color: var(--highlight);
    cursor: pointer;
}

.title {
    display: block;
    font-weight: bold;
    text-transform: uppercase;
    margin: 5px;
}

.colors .options {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    list-style: none;
    margin: 15px;
}

.colors .option {
    height: 30px;
    min-width: 30px;
    border-radius: 50%;
    margin-top: 3px;
    border: 1px solid var(--light-gray);
    margin: 2px;
}

.option #color-picker{
    opacity: 0;
    cursor: pointer;
    width: 30px;
    height: 30px;
    padding: 0;
    border: none;
    border-radius: 50%;
    appearance: none;
    outline: none;
}

.colors .option:nth-child(1) {
    background-color: red;
}

.colors .option:nth-child(2) {
    background-color: rgb(255, 149, 0);
}

.colors .option:nth-child(3) {
    background-color: rgb(255, 225, 0);
}

.colors .option:nth-child(4) {
    background-color: rgb(100, 222, 47);
}

.colors .option:nth-child(5) {
    background-color: rgb(25, 91, 255);
}

.colors .option:nth-child(6) {
    background-color: rgb(143, 8, 233);
}

.colors .option:nth-child(7) {
    background-color: rgb(255, 70, 249);
}

.colors .option:nth-child(8) {
    background-color: rgb(113, 69, 32);
}

.colors .option:nth-child(9) {
    background-color: rgb(0, 0, 0);
}

.colors .option:nth-child(10) {
    background-color: rgb(255, 255, 255);
}

.drawing-area{
    flex: 1;
}

/* paint fill toggle */

.toggle {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.toggle input {
    display: none;
}

.slider {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    background-color: #ccc;
    border-radius: 34px;
    transition: background-color 0.4s;
    margin-left: 10px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    border-radius: 50%;
    transition: transform 0.4s;
}

input:checked + .slider {
    background-color: var(--highlight);
}

input:checked + .slider:before {
    transform: translateX(26px);
}

/* **************************** */

/* size range */

.size-slider {
    width: 100%;
    margin-bottom: 20px;
}

input[type="range"] {
    -webkit-appearance: none;
    width: 100%;
    height: 10px;
    background-color: #ddd;
    border-radius: 5px;
    outline: none;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px;
    height: 20px;
    background-color: var(--dark-gray);
    border-radius: 50%;
    cursor: pointer;
    position: relative;
    z-index: 1;
}

input[type="range"]::-webkit-slider-thumb:hover {
    background-color: var(--highlight);
}

/* ****************** */

/* buttons */

.row {
    display: flex;
    align-items: center;
}

.title {
    margin-right: 10px;
    color: var(--dark-gray);
    font-weight: bold;
}

.clear-canvas,
.save-img {
    display: inline-block;
    padding: 10px 2px;
    font-size: 1rem;
    border-radius: 7px;
    cursor: pointer;
    color: white;
    width: 6rem;
    margin-bottom: 20px;
}

.clear-canvas {
    background-color: var(--dark-gray);
    border: none;
    margin-right: 10px;
}

.save-img {
    background-color: var(--highlight);
    border: none;
}

.clear-canvas:hover,
.save-img:hover {
    opacity: 0.8;
}

.clear-canvas:focus,
.save-img:focus {
    outline: none;
}

.drawing-area canvas {
    width: 100%;
    height: 100%;
    border-radius: 7px;
}

